Cleaning up app structure. Using SystemJS to load all modules into root-app

--- a/root-app/package.json
+++ b/root-app/package.json
@@ -1,34 +1,89 @@
 {
-  "name": "root-app",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@craco/craco": "^5.4.0",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1",
-    "single-spa": "^4.4.0",
-    "single-spa-react": "^2.10.2"
-  },
+  "name": "cs",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
-    "test": "craco test",
-    "eject": "react-scripts eject"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack-dev-server --open --config webpack.dev.js",
+    "start-old": "webpack-dev-server --open",
+    "build-old": "webpack --config webpack.config.js -p",
+    "build": "webpack --config webpack.prod.js",
+    "serve:production": "serve -s build"
   },
-  "eslintConfig": {
-    "extends": "react-app"
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "@material-ui/core": "^3.9.2",
+    "@material-ui/icons": "^3.0.2",
+    "@sentry/browser": "^4.3.2",
+    "@sentry/cli": "^1.40.0",
+    "axios": "^0.17.1",
+    "dotenv-webpack": "^1.7.0",
+    "fuse.js": "^3.2.0",
+    "humps": "^2.0.1",
+    "husky": "^0.14.3",
+    "immutability-helper": "^2.5.1",
+    "is-online": "^8.2.0",
+    "isomorphic-fetch": "^2.2.1",
+    "lint-staged": "^5.0.0",
+    "localforage": "^1.5.3",
+    "lodash": "^4.17.4",
+    "moment": "^2.24.0",
+    "moment-business-days": "^1.0.6",
+    "mpharma-react-table": "git://github.com/chiamaka/mpharma-react-table.git#master",
+    "normalizr": "^3.3.0",
+    "prettier": "^1.8.2",
+    "react": "^16.8.6",
+    "react-app-rewired": "^2.1.1",
+    "react-content-loader": "^4.2.1",
+    "react-dom": "^16.8.6",
+    "react-popper": "0.10.4",
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "2.1.5",
+    "react-select": "^2.4.2",
+    "react-test-renderer": "^16.8.5",
+    "redux": "^4.0.1",
+    "redux-form": "^7.4.2",
+    "redux-form-material-ui": "^5.0.0-beta.2",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^5.10.0",
+    "redux-thunk": "^2.3.0",
+    "reselect": "^3.0.1",
+    "sanitize-html": "^1.18.2",
+    "serve": "^6.4.1",
+    "single-spa": "^4.3.5",
+    "single-spa-react": "^2.10.2",
+    "styled-components": "^4.1.3",
+    "systemjs": "^6.0.0",
+    "uuid": "^3.3.2",
+    "workbox-cli": "^4.3.0",
+    "worker-loader": "^2.0.0"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "devDependencies": {
+    "@babel/core": "^7.4.5",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-react": "^7.0.0",
+    "@svgr/webpack": "^4.3.0",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "compression-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.0.0",
+    "file-loader": "^4.0.0",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "jspm": "^0.17.0-beta.49",
+    "react-inlinesvg": "^0.8.4",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.35.0",
+    "webpack-bundle-analyzer": "^3.3.2",
+    "webpack-cli": "^3.3.5",
+    "webpack-dev-server": "^3.7.2",
+    "webpack-merge": "^4.2.1"
   }
 }
